--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --typewriter-background: #212529;
+  --typewriter-color: white;
+  --typewriter-characters: 18;
+  --animation-time: 0.9s;
+  --animation-delay: 0.75s;
+  --accent-color: rgb(0, 48, 4);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -36,4 +45,88 @@ img {
 
 .modal-content {
   background-color: #212529 !important;
+}
+
+@media screen and (max-width: 600px) {
+  .chat-sidebar {
+    width: 100% !important;
+  }
+  .holder {
+    width: 0px !important;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 912px) {
+  .chat-sidebar {
+    width: 300px !important;
+  }
+  .holder {
+    width: 295px !important;
+  }
+}
+
+.holder {
+  width: 395px;
+  max-width: 100%;
+  height: 100vh;
+  background-color: white;
+}
+
+.chat-holder {
+  height: 100vh;
+  color: white;
+}
+
+/* typewriting animation */
+
+.typewriter-text {
+  text-align: center;
+  height: 2.5rem;
+  transform: scale(1.5);
+  color: white;
+  position: relative;
+  width: max-content;
+}
+
+.typewriter-text::before,
+.typewriter-text::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+}
+
+.typewriter-text::before {
+  background-color: var(--typewriter-background);
+  animation: typewriter var(--animation-time)
+    steps(var(--typewriter-characters)) var(--animation-delay) forwards;
+}
+
+@keyframes typewriter {
+  to {
+    left: 100%;
+  }
+}
+
+.typewriter-text::after {
+  width: 0.12em;
+  height: 2.5rem;
+  background: var(--typewriter-color);
+  animation: typewriter var(--animation-time)
+      steps(var(--typewriter-characters)) var(--animation-delay) forwards,
+    blinker 500ms infinite forwards;
+  opacity: 1;
+}
+
+@keyframes blinker {
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadein {
+  to {
+    opacity: 1;
+  }
 }
