--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,7 +65,7 @@ img {
 }
 
 .holder {
-  width: 395px;
+  width: 450px;
   max-width: 100%;
   height: 100vh;
   background-color: white;
@@ -129,4 +129,18 @@ img {
   to {
     opacity: 1;
   }
+}
+
+.chat-name {
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+.chat-name.active {
+  background-color: #3d3f41;
+}
+.chat-name:hover {
+  background-color: #2e3031;
+}
+.chat-name:active {
+  background-color: #424647;
 }
