--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,6 +74,7 @@ img {
 .chat-holder {
   height: 100vh;
   color: white;
+  border-left: 1px solid rgba(128, 128, 128, 0.25);
 }
 
 /* typewriting animation */
@@ -136,12 +137,42 @@ img {
   box-sizing: border-box;
 }
 .chat-name.active {
-  background-color: #3d3f41;
+  background-color: #282d2e;
+}
+.chat-name.active:hover {
+  background-color: #303738;
 }
 .chat-name:hover {
-  background-color: #2e3031;
-  transform: scale(101%);
+  background-color: #202427;
 }
 .chat-name:active {
-  background-color: #424647;
+  background-color: #363e3f;
+}
+
+.custom-placeholder::placeholder {
+  color: white !important;
+  opacity: 0.7 !important;
+}
+.typing-input {
+  background: #212529 !important;
+  color: white !important;
+  border: none !important;
+  border-radius: 25px !important;
+  outline: none !important;
+  box-shadow: none !important;
+  font-size: 0.9rem !important;
+}
+.message-icons {
+  opacity: 0.7;
+}
+.message-icons:hover {
+  background-color: #202427;
+}
+.w-60 {
+  max-width: 60% !important;
+}
+
+.back-arrow:hover {
+  transform: translateX(-10px);
+  transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1);
 }
