--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -344,6 +344,18 @@ img {
   border: 10px solid;
   border-color: var(--message-bg-left) transparent transparent transparent;
 }
+.typing-bubble::before {
+  content: " ";
+  position: absolute;
+  width: 0;
+  height: 0;
+  right: auto;
+  left: -11px;
+  top: -1px;
+  bottom: auto;
+  border: 10px solid;
+  border-color: var(--side-bar-bg) transparent transparent transparent;
+}
 
 .opacity-70 {
   opacity: 0.7 !important;
