--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,7 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .center {
@@ -359,4 +360,10 @@ img {
 
 .opacity-70 {
   opacity: 0.7 !important;
+}
+.bs-popover-top > .popover-arrow::after {
+  border-top-color: var(--header-bg) !important;
+}
+.bg-popover {
+  background: var(--header-bg) !important;
 }
