--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,7 +32,6 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   box-sizing: border-box;
-  overflow: hidden;
 }
 
 .center {
@@ -278,7 +277,7 @@ img {
 /* General message container */
 
 .chat-background {
-  background: url(../public/chat_background.png) !important;
+  background: url(../chat_background.png) !important;
   background-size: cover !important;
   background-position: center !important;
 }
@@ -404,4 +403,7 @@ img {
 }
 .w-30 {
   min-width: 30% !important;
+}
+.holded {
+  background: #0d6dfd2f !important;
 }
