--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -418,6 +418,7 @@ img {
   margin: auto;
   left: 0;
   right: 0;
+  width: 100%;
 }
 .connectivity-alert {
   transition: opacity 0.5s ease, transform 0.5s ease;
